--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 .Foto{
   width: 50%;
-  height: 700px;
+  height: 400px;
   float: left;
 }
 
@@ -38,4 +38,39 @@
 
 .Deskripsi .Cate{
   color: #ACAEB2;
+}
+
+.Review-box{
+  clear: both;
+  width: 100%;
+  overflow: hidden;
+  padding-bottom: 100px;
+}
+
+.Review-box h2{
+  margin-top: 10px;
+}
+
+.Review-box img{
+  width: 80px;
+  height: 80px;
+  background-color: #b1b1b1;
+  border-radius: 11px;
+  float: left;
+  margin-right: 15px;
+}
+
+.Review-box .User p,h3{
+  margin: 0;
+}
+
+.Review-box .User h3{
+  padding-top: 10px;
+  margin-bottom: 8px;
+}
+
+.Review-box .Item{
+  width: 80%;
+  overflow: hidden;
+  margin-bottom: 24px;
 }
